trigger rendering of Readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -10,4 +10,6 @@ improvements for working with SQL databases within R.
 To better understand what a slowly changing dimension is and how and this packages provides it,
 see `vignette("slowly-changing-dimension")`.
 
+test
+
 {% endblock %}
